2015-10-22  Version 2.5.1
=========================
- [feature] [issue #16] remove the hardcoded max 30 for artist TopN downloading
- [bugfix] [issue #16] make beautifulsoup don't print warning
- [bugfix] [issue #16] change xiami artist topN parsing for the modification of xiami website's link pattern
2015-08-06 Version 2.5.0
=========================
- [feature] add english translation (output, readme...)
2015-07-22 Version 2.4.1
=========================
- [bugfix] some 163 songs have no 128kbps link, fall back to 96kbps in this case

2014-12-08 Version 2.4.0
=========================
- [feature] (Experimental) add -p option, auto fetching proxies (proxy pool) to avoid to be banned by servers. 

2014-12-01 Version 2.3.0
=========================
- [bugfix] apply xiami new "API" to fix the xiami mp3 downloading (user favorite, album's desc)

2014-11-29 Version 2.2.0
=========================
- [bugfix] apply xiami new "API" to fix the xiami mp3 downloading (song, album, collection, artist_top)

2014-07-31 Version 2.1.1
=========================
- [feature] Pressing Ctrl-C will terminate zhuaxia immediately

2014-07-31 Version 2.1.0
=========================
- [feature] add http proxy option for xiami api request. 

2014-07-27  Version 2.0.1
=========================
- [bugfix] [163]check if there is HQ json data available before fetching the dfsid

2014-06-23  Version 2.0.0
=========================
- [feature] supports netease (music.163.com) mp3 downloading now

2014-06-23  Version 1.3.1
=========================
- [bugfix] -H option has problem to download xiami mp3 if user login successful but not VIP
- [bugfix] album html encoding problem
- [bugfix] album: song.group_dir applys albums' artist_name and name, instead of songs.
- [bugfix] after parsing url/input file, if no dl tasks, should exit zx. don't hand over to downloader

2014-06-07  Version 1.3.0
=========================
- [feature] add artist TopN songs download

2014-04-27  Version 1.2.0